# qtapplication

./: CMakeLists.txt  main.cpp  mainwindow.h  qtapplication.spec
